Give .bordered zero padding to avoid problems with text that doesn't fit on certain devices and become misaligned.

--- a/css/spni.css
+++ b/css/spni.css
@@ -83,6 +83,7 @@ label {
 .bordered {
 	border: 0.2rem solid #111111;
 	border-radius: 0.5rem;
+	padding: 0;
 }
 
 .shaded {
